# viz_agent

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  stream_formatter.py
notes/2d/: animations.md  cameras.md  constants.md  mobjects-2d.md  rate-functions.md  scenes.md  updaters.md
notes/3d/: animations.md  base-types.md  cameras.md  mobjects-2d.md  mobjects-3d.md  rate-functions.md  scenes.md  svg.md  updaters.md
notes/obscure/: animations.md  cameras.md  mobjects.md  rate-functions.md  scenes.md  updaters.md
prompts/: manim-code.md  pythagorean-plan.md
src/: agent.py  config.py  container.py  stream_formatter.py  tools.py  workspace.py
