[project]
name = "viz-agent"
version = "0.2.0"
description = "Manim video generation agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.18.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.3",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
]
